# pytest-gremlins

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  conftest.py  cspell.json  mkdocs.yml  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  dogfood.yml  release.yml
benchmarks/: Dockerfile.benchmark  README.md  __init__.py  baseline.json  check_regression.py  run_benchmarks.py
benchmarks/docker/: .dockerignore  Dockerfile  run_comparison.py
benchmarks/results/: .gitignore
docs/: changelog.md  contributing.md  index.md
docs/api/: cache.md  coverage.md  index.md  instrumentation.md  operators.md  parallel.md  plugin.md  reporting.md
docs/architecture/: coverage-guidance.md  incremental-analysis.md  index.md  mutation-switching.md  parallelization.md  speed.md
docs/cookbook/: ci-integration.md  django.md  fastapi.md  index.md  monorepo.md  pre-commit.md  pytest-plugins.md  tdd-workflow.md
docs/design/: AGENT_GUIDELINES.md  NORTH_STAR.md  OPERATORS.md
docs/guide/: comparison.md  configuration.md  extensibility.md  getting-started.md  operators.md  reports.md  troubleshooting.md
docs/javascripts/: tablesort.js
docs/overrides/: .gitkeep
docs/performance/: profile_stats.txt  profiling-report.md  profiling_data.json
docs/stylesheets/: extra.css
examples/: custom_operator.py
examples/ci/: github_actions_mutation_testing.yml  upload_to_stryker_dashboard.py
features/: e2e_plugin.feature
includes/: abbreviations.md
scripts/: profile_gremlins.py
src/pytest_gremlins/: __init__.py  config.py  plugin.py
src/pytest_gremlins/cache/: __init__.py  hasher.py  incremental.py  store.py
src/pytest_gremlins/coverage/: __init__.py  collector.py  mapper.py  prioritized_selector.py  selector.py
src/pytest_gremlins/instrumentation/: __init__.py  finder.py  gremlin.py  import_hooks.py  switcher.py  transformer.py
src/pytest_gremlins/operators/: __init__.py  arithmetic.py  boolean.py  boundary.py  comparison.py  protocol.py  registry.py  return_value.py
src/pytest_gremlins/parallel/: __init__.py  aggregator.py  batch_executor.py  distribution.py  persistent_pool.py  pool.py  pool_config.py
src/pytest_gremlins/reporting/: __init__.py  console.py  html.py  json_reporter.py  results.py  score.py  sonarqube_export.py  stryker_export.py
tests/: conftest.py
tests/benchmark/: test_benchmark_infrastructure.py  test_check_regression.py
tests/medium/: test_boolean_class_defaults_bug.py  test_cache_integration.py  test_cache_large_scale.py  test_cache_performance_integration.py  test_coverage_integration.py  test_parallel_integration.py  test_plugin_integration.py  test_store_performance.py
tests/small/: test_plugin_exit_code_classification.py  test_plugin_helpers.py  test_plugin_node_id_normalization.py  test_plugin_path_conversion.py  test_plugin_pytest_cov_conflict.py
tests/small/cache/: test_bug_hunting.py  test_cache_integration_perf.py  test_cache_key_bug.py  test_cache_key_memoization.py  test_cache_performance.py  test_hasher.py  test_incremental.py  test_incremental_batch.py  test_plugin_cache_overhead.py  test_store.py  test_store_batch.py
tests/small/config/: __init__.py  test_plugin_config.py  test_plugin_integration.py  test_pyproject.py
tests/small/coverage/: test_collector.py  test_mapper.py  test_selector.py
tests/small/coverage_module/: test_collector.py  test_prioritized_integration.py  test_prioritized_selector.py
tests/small/instrumentation/: test_class_default_mutations.py  test_finder.py  test_gremlin.py  test_import_hooks.py  test_switcher.py  test_transformer.py  test_transformer_coverage.py
tests/small/operators/: test_arithmetic.py  test_boolean.py  test_boundary.py  test_comparison.py  test_protocol.py  test_registry.py  test_return.py
tests/small/parallel/: test_aggregator.py  test_batch_executor.py  test_batch_executor_with_config.py  test_cli.py  test_distribution.py  test_optimized_pool.py  test_persistent_pool.py  test_pool.py  test_pool_config.py  test_pool_optimization_benefits.py
tests/small/pytest_gremlins/: test_version.py
tests/small/reporting/: test_console.py  test_html.py  test_json.py  test_results.py  test_score.py  test_sonarqube_export.py  test_stryker_export.py
